--- a/RIval/Design/Controls/Auth/LoginComponent.xaml
+++ b/RIval/Design/Controls/Auth/LoginComponent.xaml
@@ -8,24 +8,24 @@
              mc:Ignorable="d" Width="338.964" Height="408.311">
     <Grid Margin="0">
 
-        <Image HorizontalAlignment="Left" Height="409" VerticalAlignment="Top" Width="339" Source="/Ignite;component/Resources/Images/Bg/bg.jpg" Stretch="UniformToFill"/>
-        <TextBox x:Name="EmailBox" HorizontalAlignment="Left" Height="29" Margin="32,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="#FFEAE7E7" BorderBrush="#FF818181" SelectionBrush="White"/>
-        <Button x:Name="LoginButton" Content="Войти" HorizontalAlignment="Left" Margin="32,244,0,0" VerticalAlignment="Top" Width="274" Height="36" FontSize="16" Background="#99000000" Cursor="Hand" Foreground="White" Click="LoginButton_Click"/>
-        <Button x:Name="RegisterButton" Content="Создать учетную запись" HorizontalAlignment="Left" Margin="32,287,0,0" VerticalAlignment="Top" Width="274" Height="35" Background="#FF178BEC" FontSize="16" Cursor="Hand" Foreground="#FFFFFCFC" Click="Button_Click"/>
-        <Label x:Name="RecoveryPasswordLink" Content="Восстановление доступа" HorizontalAlignment="Left" Margin="32,368,0,0" VerticalAlignment="Top" Width="208" Foreground="#FF178BEC" FontSize="16" Cursor="Hand"/>
-        <Rectangle Fill="#FFAAAAAA" HorizontalAlignment="Left" Height="1" Margin="32,230,0,0" Stroke="#FFB0B0B0" VerticalAlignment="Top" Width="274"/>
-        <Label x:Name="AuthLoginTitle" Content="АВТОРИЗАЦИЯ" HorizontalAlignment="Left" Margin="106,111,0,0" VerticalAlignment="Top" Width="134"/>
-        <Rectangle Fill="#FF0E0E0E" HorizontalAlignment="Left" Height="103" Stroke="Black" VerticalAlignment="Top" Width="339" Opacity="0.7" Margin="0,-1,0,0"/>
-        <Image HorizontalAlignment="Left" Height="113" Margin="57,-8,0,0" VerticalAlignment="Top" Width="238" Source="/Ignite;component/Resources/Images/Minis/logo_wowv2.png"/>
+        <Image HorizontalAlignment="Left" Height="409" VerticalAlignment="Top" Width="339" Source="/Ignite;component/Resources/Images/Bg/bg.jpg" Stretch="UniformToFill" Margin="0,-1,0,0"/>
+        <TextBox x:Name="EmailBox" HorizontalAlignment="Left" Height="29" Margin="32,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="274" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="#FFEAE7E7" BorderBrush="#FF818181" SelectionBrush="White"/>
+        <Button x:Name="LoginButton" Content="Войти" HorizontalAlignment="Left" Margin="32,214,0,0" VerticalAlignment="Top" Width="274" Height="36" FontSize="16" Background="#99000000" Cursor="Hand" Foreground="White" Click="LoginButton_Click"/>
+        <Button x:Name="RegisterButton" Content="Создать учетную запись" HorizontalAlignment="Left" Margin="32,257,0,0" VerticalAlignment="Top" Width="274" Height="35" Background="#FF288BDE" FontSize="16" Cursor="Hand" Foreground="#FFFFFCFC" Click="Button_Click"/>
+        <Label x:Name="RecoveryPasswordLink" Content="Восстановление доступа" HorizontalAlignment="Left" Margin="29,368,0,0" VerticalAlignment="Top" Width="208" Foreground="#FF178BEC" FontSize="16" Cursor="Hand" FontStyle="Italic"/>
+        <Rectangle Fill="#FFAAAAAA" HorizontalAlignment="Left" Height="1" Margin="32,200,0,0" Stroke="#FFB0B0B0" VerticalAlignment="Top" Width="274"/>
+        <Label x:Name="AuthLoginTitle" Content="АВТОРИЗАЦИЯ" HorizontalAlignment="Left" Margin="32,59,0,0" VerticalAlignment="Top" Width="274" FontSize="16"/>
+        <Rectangle Fill="#FF0E0E0E" HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Top" Width="339" Opacity="0.7" Margin="0,-1,0,0"/>
+        <Image HorizontalAlignment="Left" Height="35" Margin="5,1,0,0" VerticalAlignment="Top" Width="78" Source="/Ignite;component/Resources/Images/Minis/bez_wow.png"/>
         <Image x:Name="CloseButton" HorizontalAlignment="Left" Height="31" Margin="312,0,0,0" VerticalAlignment="Top" Width="27" Source="/Ignite;component/Resources/Icons/Window/window_close.png" MouseDown="CloseButton_MouseDown" Cursor="Hand">
             <Image.ToolTip>
                 <ToolTip x:Name="CloseTooltip" Content="Выйти из программы"/>
             </Image.ToolTip>
         </Image>
-        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="32,187,0,0" VerticalAlignment="Top" Width="274" Height="29" Background="#FF151723" BorderBrush="#FF818181" Foreground="#FFEAE7E7" SelectionBrush="White" Opacity="0.85" FontSize="16"/>
-        <CheckBox x:Name="RememberCheckBox" HorizontalAlignment="Left" Margin="32,336,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF178BEC" Height="16" Width="16" Background="#FF178BEC" BorderBrush="#FF178BEC" OpacityMask="#FF178BEC"/>
-        <Label x:Name="RememberMeLabel" Content="Remember Me" HorizontalAlignment="Left" Margin="48,326,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16"/>
-        <Image x:Name="LangSwitcher" HorizontalAlignment="Left" Height="35" Margin="299,365,0,0" VerticalAlignment="Top" Width="35" Source="/Ignite;component/Resources/Icons/lang-icon.png" MouseDown="Image_MouseDown">
+        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="32,157,0,0" VerticalAlignment="Top" Width="274" Height="29" Background="#FF151723" BorderBrush="#FF818181" Foreground="#FFEAE7E7" SelectionBrush="White" Opacity="0.85" FontSize="16"/>
+        <CheckBox x:Name="RememberCheckBox" HorizontalAlignment="Left" Margin="32,315,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF178BEC" Height="16" Width="16" Background="#FF178BEC" BorderBrush="#FF178BEC" OpacityMask="#FF178BEC"/>
+        <Label x:Name="RememberMeLabel" Content="Remember Me" HorizontalAlignment="Left" Margin="48,305,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16"/>
+        <Image x:Name="LangSwitcher" HorizontalAlignment="Left" Height="33" Margin="298,367,0,0" VerticalAlignment="Top" Width="30" Source="/Ignite;component/Resources/Icons/lang-icon.png" MouseDown="Image_MouseDown">
             <Image.ContextMenu>
                 <ContextMenu>
                     <MenuItem x:Name="MenuItem_LangSwitch_English" Header="English" Click="MenuItem_LangSwitch_English_Click">
