--- a/RIval/Design/Controls/Settings/RealmSettings.xaml
+++ b/RIval/Design/Controls/Settings/RealmSettings.xaml
@@ -13,12 +13,15 @@
         </LinearGradientBrush>
     </UserControl.Background>
     <Grid Width="566" Height="328">
-        <TextBox x:Name="LoginBox" HorizontalAlignment="Left" Height="29" Margin="14,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="429" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="White" BorderBrush="#FF818181" SelectionBrush="White" Text="F:/Games/Ignite Bfa/"/>
-        <Label Content="Настройки игрового клиента" HorizontalAlignment="Left" Margin="21,11,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
-        <Label Content="Путь до папки с игрой:" HorizontalAlignment="Left" Margin="14,58,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
-        <Button x:Name="ReportButton" Content="Изменить" Height="Auto" Margin="448,87,8,212" Background="#FF288BDE" FontSize="14"/>
-        <CheckBox x:Name="RememberCheckBox" HorizontalAlignment="Left" Margin="14,131,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF178BEC" Height="16" Width="16" Background="#FF178BEC" BorderBrush="#FF178BEC" OpacityMask="#FF178BEC"/>
-        <Label x:Name="RememberMeLabel" Content="Автовход в учетную запись" HorizontalAlignment="Left" Margin="31,123,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBox x:Name="LoginBox" HorizontalAlignment="Left" Height="29" Margin="11,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="429" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="White" BorderBrush="#FF818181" SelectionBrush="White" Text="F:/Games/Ignite Bfa/"/>
+        <Label Content="Настройки игрового клиента" HorizontalAlignment="Left" Margin="12,10,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Путь до папки с игрой:" HorizontalAlignment="Left" Margin="11,98,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <Button x:Name="ReportButton" Content="Изменить" Height="Auto" Margin="445,127,11,172" Background="#FF288BDE" FontSize="14" Cursor="Hand"/>
+        <TextBox x:Name="LoginBox_Copy" HorizontalAlignment="Left" Height="29" Margin="11,254,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="429" FontSize="16" Background="#FF151723" Opacity="0.85" Foreground="White" BorderBrush="#FF818181" SelectionBrush="White" Text="F:/Games/Ignite Bfa/"/>
+        <Label Content="Путь до папки с игрой:" HorizontalAlignment="Left" Margin="11,225,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <Button x:Name="ReportButton_Copy" Content="Изменить" Height="Auto" Margin="445,254,11,45" Background="#FF288BDE" FontSize="14" Cursor="Hand"/>
+        <Label Content="ATAL'DAZAR" HorizontalAlignment="Left" Margin="12,71,0,0" VerticalAlignment="Top" Foreground="#FFA6A4A4" FontSize="14" IsEnabled="False"/>
+        <Label Content="MOTHERLODE" HorizontalAlignment="Left" Margin="12,191,0,0" VerticalAlignment="Top" Foreground="#FFA6A4A4" FontSize="14" IsEnabled="False"/>
 
     </Grid>
 </UserControl>
