--- a/RIval/Design/Controls/Settings/SettingsWindow.xaml
+++ b/RIval/Design/Controls/Settings/SettingsWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Ignite.Design.Controls.Settings"
         xmlns:Controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls" x:Class="Ignite.Design.Controls.Settings.SettingsWindow"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="797.574" WindowStyle="None" BorderBrush="White">
+        Title="SettingsWindow" Height="450" Width="797.574" WindowStyle="None" BorderThickness="1" BorderBrush="#FF919191" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MouseDown="Window_MouseDown">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="#FF171723" Offset="0"/>
@@ -14,28 +14,32 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid Margin="0,-1,0,1">
-        <Border BorderBrush="#FFB4B4B4" BorderThickness="1" HorizontalAlignment="Left" Height="48" VerticalAlignment="Top" Width="792" Background="#FF727272" Opacity="0.25"/>
-        <Image x:Name="CloseButton" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="28" Source="/Ignite;component/Resources/Icons/Window/window_close.png" MouseDown="Image_MouseDown" Margin="756,9,0,0" Cursor="Hand">
+        <Border BorderBrush="#FFB4B4B4" BorderThickness="1" HorizontalAlignment="Left" Height="48" VerticalAlignment="Top" Width="796" Background="#FF727272" Opacity="0.25"/>
+        <Image x:Name="CloseButton" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="28" Source="/Ignite;component/Resources/Icons/Window/window_close.png" Margin="765,4,0,0" Cursor="Hand" MouseDown="CloseButton_MouseDown">
             <Image.ToolTip>
                 <ToolTip x:Name="CloseTooltip" Content="Выйти из программы"/>
             </Image.ToolTip>
         </Image>
         <Label x:Name="Title" Content="Настройки" HorizontalAlignment="Left" Margin="17,7,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16" FontWeight="Bold" Width="303"/>
-        <Border BorderBrush="#FFB4B4B4" BorderThickness="1" HorizontalAlignment="Left" Height="65" VerticalAlignment="Top" Width="790" Background="#FF727272" Opacity="0.25" Margin="1,378,0,-1"/>
-        <Button x:Name="ReportButton" Content="Применить" Height="Auto" Margin="605,390,10,12" Background="#FF288BDE" FontSize="16"/>
-        <Button x:Name="OkButton" Content="Отмена" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="40" FontSize="16" Cursor="Hand" HorizontalContentAlignment="Left" BorderBrush="White" Background="#33C5C5C5" Click="CheckButton_Click" Margin="430,390,0,0"/>
+        <Border BorderBrush="#FFB4B4B4" BorderThickness="1" HorizontalAlignment="Left" Height="66" VerticalAlignment="Top" Width="795" Background="#FF727272" Opacity="0.25" Margin="1,383,0,-1"/>
+        <Button x:Name="AppendSettingsButton" Content="Применить" Height="Auto" Margin="605,395,10,13" Background="#FF288BDE" FontSize="16" Cursor="Hand"/>
+        <Button x:Name="CancelButton" Content="Отмена" HorizontalAlignment="Left" VerticalAlignment="Top" Width="170" Height="40" FontSize="16" Cursor="Hand" HorizontalContentAlignment="Left" BorderBrush="White" Background="#33C5C5C5" Margin="430,395,0,0" Click="CancelButton_Click"/>
 
         <Controls:BlurryUserControl VerticalAlignment="Top"
             HorizontalAlignment="Stretch"
-            Height="330"
+            Height="334"
             BlurContainer="{Binding ElementName=InnerBlurContainer}"
             Magnification="0.75" Background="{x:Null}" BlurRadius="20" Margin="0,48,571,0" BorderBrush="#FFB2AFAF" BorderThickness="0,0,1,0" Opacity="0.65">
         </Controls:BlurryUserControl>
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="ATAL'DAZAR" VerticalAlignment="Top" Height="53" Margin="0,48,0,0" Width="219" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF288BDE"/>
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="MOTHERLODE" VerticalAlignment="Top" Height="53" Margin="0,101,0,0" Width="219" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF288BDE"/>
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Мои аккауты" VerticalAlignment="Top" Height="53" Margin="0,154,0,0" Width="219" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF288BDE"/>
-        <Grid x:Name="Container" HorizontalAlignment="Left" Height="328" Margin="224,50,0,0" VerticalAlignment="Top" Width="566">
-            
+        <TextBlock x:Name="ResetSettingsButton" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Сбросить настройки" VerticalAlignment="Top" Height="53" Margin="0,328,0,0" Width="223" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF831919" Cursor="Hand" MouseEnter="ResetSettingsButton_MouseEnter" MouseLeave="ResetSettingsButton_MouseLeave" MouseDown="ResetSettingsButton_MouseDown"/>
+        <Border x:Name="GameSettingsTab" BorderThickness="5,0,0,0" HorizontalAlignment="Left" Height="57" Margin="0,48,0,0" VerticalAlignment="Top" Width="223" Cursor="Hand">
+            <TextBlock x:Name="GameSettingsTabTitle" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Настройки игры" VerticalAlignment="Top" Height="56" Margin="-8,1,0,0" Width="226" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF288BDE" Cursor="Hand" MouseDown="TextBlock_MouseDown" MouseEnter="TextBlock_MouseEnter" MouseLeave="TextBlock_MouseLeave"/>
+        </Border>
+        <Border x:Name="AccountSettings" BorderThickness="5,0,0,0" HorizontalAlignment="Left" Height="57" Margin="0,106,0,0" VerticalAlignment="Top" Width="223" Cursor="Hand">
+            <TextBlock x:Name="AccountSettingsTabTitle" TextWrapping="Wrap" Text="Учетные записи" VerticalAlignment="Top" Height="56" Margin="-8,1,0,0" TextAlignment="Center" Padding="0,15,0,0" Foreground="#FF288BDE" Cursor="Hand" MouseDown="TextBlock_MouseDown_1" MouseEnter="TextBlock_MouseEnter" MouseLeave="TextBlock_MouseLeave"/>
+        </Border>
+        <Grid x:Name="Container" HorizontalAlignment="Left" Height="328" Margin="227,51,0,0" VerticalAlignment="Top" Width="566">
+
         </Grid>
     </Grid>
 </Window>
